# msk-mjx

./: .gitignore  README.md  pyproject.toml
configs/: locomotion.yaml  running.yaml  standing.yaml
scripts/: eval.py  play.py  train.py
src/msk_mjx/: __init__.py
src/msk_mjx/envs/: __init__.py  locomotion.py  observations.py  rewards.py  task_config.py
src/msk_mjx/muscle/: __init__.py  activation.py  base.py  curves.py  elastic_tendon.py  parameters.py  rigid.py
src/msk_mjx/physics/: __init__.py  pipeline.py
src/msk_mjx/training/: __init__.py  networks.py  normalization.py  ppo.py
tests/: test_activation.py
